--- a/styles/general.css
+++ b/styles/general.css
@@ -36,12 +36,16 @@ body {
 
 .nav-bar > div {
     display: flex;
+    align-items: center;
     gap: 20px;
     margin-left: 20px; margin-right: 20px;
 }
 
 /* Estilização de Hyperlinks da Nav-Bar */
 .nav-bar a {
+    --hover-color: #872cdf;
+    --active-color: #be79ff;
+
     text-decoration: none;
     color: white;
     font-weight: bold;
@@ -50,14 +54,14 @@ body {
 }
 
 .nav-bar a:hover {
-    color: #872cdf;
+    color: var(--hover-color);
     transform: scale(1.1);
 }
 
 .nav-bar a:active {
-    color: #be79ff;
+    color: var(--active-color);
     transform: scale(0.9);
-    text-shadow: 0px 0px 5px #be79ff;
+    text-shadow: 0px 0px 5px var(--active-color);
 }
 
 .content {
@@ -313,6 +317,26 @@ button:active {
 .login-tab img {
     width: 50px;
     object-fit: cover;
+}
+
+/* Estilização do login/user-info */
+#user-info img {
+    width: 50px;
+    border-radius: 50px;
+}
+
+#login-btn {
+    --hover-color: white;
+    --active-color: white;
+
+    background-color: #872cdf;
+    padding: 10px; padding-left: 30px; padding-right: 30px;
+    border-radius: 10px;
+}
+
+/* Estilização das ferramentas */
+#tools-div {
+    padding-top: 100px;
 }
 
 /* Estilização de textos */
