--- a/css/general.css
+++ b/css/general.css
@@ -320,6 +320,14 @@ button:active {
 }
 
 /* Estilização do login/user-info */
+#user-info {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    gap: 10px;
+}
+
 #user-info img {
     width: 50px;
     border-radius: 50px;
@@ -332,6 +340,66 @@ button:active {
     background-color: #872cdf;
     padding: 10px; padding-left: 30px; padding-right: 30px;
     border-radius: 10px;
+}
+
+/* Botão Imagem */
+.inside-button {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.inside-button > img {
+    border: 2px #872cdf solid;
+}
+
+.inside-button button {
+    --bg: black;
+    --hover: black;
+    --active:black;
+    --scale: 1.0;
+
+    background: rgba(0, 0, 0, 0.6);
+    color: white;
+    border: none;
+    border-radius: 50%;
+
+    width: 100%;
+    height: 100%;
+    
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    padding: 0px;
+    margin: 0px;
+    cursor: pointer;
+    text-align: center;
+
+    opacity: 0;
+    transition: opacity 0.3s ease;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.inside-button button > img {
+    color: white;
+    width: 30px !important;
+    object-fit: contain;
+}
+
+.inside-button button:hover {
+    opacity: 1;
+    scale: 1;
+}
+
+.inside-button button:active {
+    background-color: hsla(0, 0%, 31%, 0.494);
+    scale: 1;
 }
 
 /* Estilização das ferramentas */
