--- a/css/general.css
+++ b/css/general.css
@@ -365,8 +365,8 @@ button:active {
     border: none;
     border-radius: 50%;
 
-    width: 100%;
-    height: 100%;
+    width: 50px;
+    height: 50px;
     
     position: absolute;
     top: 50%;
