--- a/css/general.css
+++ b/css/general.css
@@ -404,7 +404,24 @@ button:active {
 
 /* Estilização das ferramentas */
 #tools-div {
-    padding-top: 100px;
+    padding-top: 50px;
+}
+
+#tools-div img {
+    width: 100px;
+    filter: drop-shadow(0px 0px 3px #892cdf8c);
+    transition: 0.2s;
+    transform-style: preserve-3d;
+}
+
+#tools-div img:hover {
+    transform: scale(1.1);
+    filter: drop-shadow(0px 0px 5px #9d2cdf9a);
+}
+
+#tools-div img:active {
+    transform: rotate(10deg) scale(0.9);
+    filter: drop-shadow(0px 0px 5px #c431e9af);
 }
 
 /* Estilização de textos */
